--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,6 @@
+/**
+ * CSS is a slightly modified version of the Udacity React Contacts in class project.
+ */
 html {
   box-sizing: border-box;
 }
