Make updates to meet requirements.
Update readme's for clarity.

Update api requests to work on local machines as well
as with environment variables.

Fix error caused when adding post without content.

Update comments for post  immediately after comment is
created.

Don't show deleted posts comments if a user tries
to navigate to the post.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,7 +19,16 @@ body {
 body, .app {
   background: #f5f5f5;
 }
-
+.valid {
+  display: none;
+}
+.error {
+  color: #FF0000;
+  display: block;
+}
+.center {
+  text-align: center;
+}
 /* CreatePost */
 
 .create-posts-form {
